--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -24,7 +24,7 @@
             <form>
                 <div class="row">
                     <div mat-dialog-actions align="center">
-                        <button mat-raised-button  color="primary">Choose recipient</button>
+                        <button mat-raised-button (click)="choiceReci()" color="primary">Choose recipient</button>
                     </div>
                 </div>
                 <mat-grid-list cols="2" rowHeight="80px">
