--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -17,16 +17,16 @@
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" opened="true">
         <mat-nav-list>
-            <mat-list-item routerLink="/send-transaction">
+            <mat-list-item routerLink="send-transaction">
                 <mat-icon>send</mat-icon><span>Transactions</span>
             </mat-list-item>
             <mat-list-item routerLink="#">
                 <mat-icon>history</mat-icon><span>History</span>
-            </mat-list-item>    
+            </mat-list-item>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet>
         </router-outlet>
     </mat-sidenav-content>
-</mat-sidenav-container> 
+</mat-sidenav-container>
