--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
             <mat-list-item routerLink="send-transaction">
                 <mat-icon>send</mat-icon><span>Transactions</span>
             </mat-list-item>
-            <mat-list-item routerLink="#">
+            <mat-list-item routerLink="history">
                 <mat-icon>history</mat-icon><span>History</span>
             </mat-list-item>
         </mat-nav-list>
